# gba-emulator

./: CMakeLists.txt  GBA_Cpu.cpp  GBA_Cpu.h  GBA_Memory.cpp  GBA_Memory.h  README.txt  assembly.cpp  assembly.h  bit_utils.cpp  bit_utils.h  gba-emulator.kdev4  inspector.py  main.cpp  opcodes.cpp  opcodes.h  repl.cpp  repl.h  string_utils.h  test_mov.gba.bak
.kdev4/: gba-emulator.kdev4
